@@ -62,10 +62,10 @@ bool db_create_pool_record(B_DB *mdb, POOL_DBR *pr);
  * -----------------------------------------------------------------------
  */
 
-int db_create_file_attributes_record(JCR *jcr, B_DB *mdb, ATTR_DBR *ar)
+bool db_create_file_attributes_record(JCR *jcr, B_DB *mdb, ATTR_DBR *ar)
 {
    /* *****FIXME***** implement this */
-   return 1;
+   return true;
 }
 
 int db_create_file_item(JCR *jcr, B_DB *mdb, ATTR_DBR *ar)
@@ -312,5 +312,10 @@ bool db_create_fileset_record(JCR *jcr, B_DB *mdb, FILESET_DBR *fsr)
 int db_create_counter_record(JCR *jcr, B_DB *mdb, COUNTER_DBR *cr)
 { return 0; }
 
+bool db_write_batch_file_records(JCR *jcr) { return false; }
+bool my_batch_start(JCR *jcr, B_DB *mdb) { return false; }
+bool my_batch_end(JCR *jcr, B_DB *mdb, const char *error) { return false; }
+bool my_batch_insert(JCR *jcr, B_DB *mdb, ATTR_DBR *ar) { return false; }
+                                 
 
 #endif /* HAVE_BACULA_DB */
